--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.test.currencies">
+    package="com.currencies">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CurrenciesApp"
-        tools:ignore="AllowBackup">
+        android:theme="@style/Theme.CurrenciesApp">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
@@ -24,5 +23,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
