--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation "androidx.room:room-runtime:2.4.2"
     implementation "androidx.room:room-ktx:2.4.2"
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'androidx.hilt:hilt-common:1.0.0'
     kapt "androidx.room:room-compiler:2.4.2"
     implementation 'org.jsoup:jsoup:1.15.2'
     implementation 'com.google.dagger:hilt-android:2.42'
+    implementation("androidx.hilt:hilt-work:1.0.0")
     kapt 'com.google.dagger:hilt-compiler:2.42'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
